tests/tools/turndefs/routeSampler/errors/walk_input_fromTo/errors.tools
Warning: Ignoring walk for person 0 in file 'input_routes.rou.xml' because it does not contain edges.
Error: no input routes loaded
